--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,10 +1,40 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8" />
-    <title>title</title>
-</head>
-<body>
+<form id="profile-form">
+  <!-- Step 1: Personal Info -->
+  <div class="step" id="step1">
+    <h2>Personal Information</h2>
+    <!-- Profile Photo -->
+    <div class="form-group">
+      <label>Profile Photo (JPG/PNG, max 2MB)</label>
+      <input type="file" id="profilePhoto" accept=".jpg,.jpeg,.png">
+      <img id="photoPreview" style="max-width:200px; display:none;">
+    </div>
     
-</body>
-</html>
+    <!-- Username -->
+    <div class="form-group">
+      <label>Username</label>
+      <input type="text" id="username">
+      <div id="usernameFeedback"></div>
+    </div>
+    
+    <!-- Password Fields -->
+    <div class="form-group">
+      <label>Current Password</label>
+      <input type="password" id="currentPassword">
+    </div>
+    <div class="form-group">
+      <label>New Password</label>
+      <input type="password" id="newPassword">
+      <div id="passwordStrength"></div>
+    </div>
+    <button type="button" class="next-btn">Next</button>
+  </div>
+  
+  <!-- Step 2: Professional Details -->
+  <div class="step hidden" id="step2">...</div>
+  
+  <!-- Step 3: Preferences -->
+  <div class="step hidden" id="step3">...</div>
+  
+  <!-- Summary Step -->
+  <div class="step hidden" id="summary">...</div>
+</form>
